# protypo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  generator-test.yml  release.yml
generators/: README.md
generators/actix/: Generator.yaml  values.yaml
generators/actix-ra/: Generator.yaml  values.yaml
generators/actix-ra/entities/: list.json
generators/actix/files/: .env  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose.yml
generators/actix/files/src/: app_state.rs  main.rs  settings.rs
generators/actix/templates/: controller.rs.jinja  dockerfile.jinja  inject_migrator.jinja  replace_app_name.jinja
generators/commons/: Generator.yaml
generators/commons/templates/: _add_tenants_db.sql.jinja  _drop_db.sql.jinja  _init_db.sql.jinja  _macros.jinja  _macros_front.jinja
generators/jdl/: Generator.yaml  values.yaml
generators/jdl/templates/: jdl.jinja  jdl.rrgen
generators/jsonschema-commons/: Generator.yaml
generators/jsonschema-commons/templates/: _add_tenants_db.sql.jinja  _macros.jinja  _macros.tpl  _macros_front.jinja  _macros_front.tpl
generators/loco/: Generator.yaml  values.yaml
generators/loco-multitenancy/: Generator.yaml  README.md  values.yaml
generators/loco-multitenancy/entities/: invitation.json  member.json  permission.json  role.json  user.json  workspace.json  workspace_user.json
generators/loco-multitenancy/templates/: 02_add_multitenancy_support.sql.jinja  inject_in_controllers.jinja  inject_in_entities.jinja  inject_in_tenant.jinja  inject_in_user_model.jinja  migration_002_add_tenants.jinja
generators/loco-ra/: Generator.yaml  values.yaml
generators/loco-ra-multitenant/: Generator.yaml
generators/loco-ra-shadcn/: Generator.yaml  values.yaml
generators/loco-ra/entities/: customer.json  invoice.json  item.json  tag.json
generators/loco-react-admin/: values.yaml
generators/loco/entities/: user.json
generators/loco/files/: .env  Cargo.toml  Dockerfile  docker-compose.yml
generators/loco/files/config/: development.yaml  production.yaml  test.yaml
generators/loco/files/migration/: Cargo.toml
generators/loco/files/migration/src/: lib.rs
generators/loco/files/src/: app.rs  lib.rs
generators/loco/files/src/controllers/: auth.rs  utils.rs
generators/loco/files/src/initializers/: mod.rs
generators/loco/files/src/mailers/mailers/: auth.rs
generators/loco/files/src/views/: auth.rs
generators/loco/files/tests/models/: users.rs.t
generators/loco/files/tests/requests/: auth.rs  auth.rs.t  notes.rs.t  prepare_data.rs  prepare_data.rs.t  user.rs.t
generators/loco/templates/: Cargo.lock.jinja  Cargo.toml.jinja  Cargo.toml.rrgen  app.rrgen  app.rs.jinja  controller.rrgen  controller.rs.jinja  controller_mod.rs.jinja  docker-compose.rrgen  docker-compose.yaml.jinja  dockerfile.fullstack.alpine.jinja  dockerfile.fullstack.alpine.rrgen  entity.rrgen  entity.rs.jinja  enum.rs.jinja  graphql_query_root.rrgen  graphql_query_root.rs.jinja  inject_in_user.jinja  m2m.rrgen  m2m.rs.jinja  main.rs.jinja  migration_lib.rrgen  migration_lib.rs.jinja  migration_m2m.rrgen  migration_m2m.rs.jinja  migration_model.rrgen  migration_model.rs.jinja  replace_app_name.jinja
generators/proto3/: Generator.yaml  values.yaml
generators/proto3/templates/: _proto_macros.jinja  proto.jinja
generators/ra-shadcn/: Generator.yaml
generators/ra-shadcn/files/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.loco.ts  vite.config.ts
generators/ra-shadcn/templates/: App.tsx.jinja  authProvider.tsx.jinja  models.tsx.jinja  react-admin-macros.jinja
generators/react-admin/: Generator.yaml  values.yaml
generators/react-admin/templates/: App.rrgen  dataProvider.tsx.jinja  models.rrgen  models.tsx.jinja  package.json.jinja  react-admin-macros.jinja
generators/seaography/: Generator.yaml
generators/seaography/templates/: graphql.rs.jinja  graphql_query_root.rs.jinja
generators/seaorm-entities/: Generator.yaml  values.yaml
generators/seaorm-entities/templates/: add_seaorm_dependencies.jinja  entity.rrgen  entity.rs.jinja  entity_mod.rrgen  entity_mod.rs.jinja  enum.rrgen  enum.rs.jinja  m2m_entity.rrgen  m2m_entity.ts.jinja
generators/seaorm-migration/: Generator.yaml  values.yaml
generators/seaorm-migration/entities/: company.json  role.json
generators/seaorm-migration/files/: Cargo.toml
generators/seaorm-migration/templates/: _migration_model.rs.jinja  _migration_model_m2m.rs.jinja  migration_001_init_db.jinja  migration_002_add_tenants.jinja
generators/shuttle/: Generator.yaml  values.yaml
generators/shuttle/templates/: deployment_shuttle.jinja  deployment_shuttle_config.jinja
generators/spring-ra/: Generator.yaml  values.yaml
generators/spring-ra/entities/: customer.json  item.json  tag.json
generators/spring-rs/: Generator.yaml  values.yaml
generators/spring-rs-multitenancy/: Generator.yaml  values.yaml
generators/spring-rs-multitenancy/entities/: company.json  role.json  user.json
generators/spring-rs-multitenancy/templates/: 02_add_multitenancy_support.sql.jinja  inject_in_controllers.jinja  inject_in_entities.jinja  inject_in_migrations.jinja
generators/spring-rs-react-admin/: Generator.yaml  values.yaml
generators/spring-rs-react-admin/entities/: TodoItem.json  TodoList.json  customer.json  item.json  list.json  tag.json
generators/spring-rs/files/: .env  Cargo.toml  Dockerfile  compose.yaml  docker-compose.yml
generators/spring-rs/files/config/: app-prod.toml  app.toml
generators/spring-rs/files/src/: main.rs
generators/spring-rs/files/src/controllers/: utils.rs
generators/tonic-grpc/: Generator.yaml
generators/tonic-grpc/files/: Cargo.toml  build.rs
generators/tonic-grpc/files/proto/: healthcheck.proto
generators/tonic-grpc/files/src/: main.rs
generators/tonic-grpc/files/src/services/: healthcheck.rs
generators/tonic-ra/: Generator.yaml  values.yaml
protypo/: Cargo.toml
protypo-cli/: Cargo.toml
protypo-cli/src/: main.rs
protypo/src/: lib.rs
src/: files.rs  filters.rs  generator.rs  main.rs  mod.rs
(+54 files in other folders)
