[package]
name = "protypo"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
dirs = "5.0"
git2 = "0.14"
flate2 = "1.0"
futures = "0.3"
glob = "0.3"
jsonptr = "0.6"
jsonschema = "0.21"
json_value_merge = "2.0"
log = "0.4"
rrgen = { git = "https://github.com/dinosath/rrgen.git" }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "stream","blocking"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = {version = "1.10",features = ["v4", "fast-rng", ] }
zip = "0.6"