[workspace]
members = ["protypo","protypo-cli"]
exclude = ["output"]
resolver = "2"

[profile.release]
strip = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
panic = "abort"