[package]
name = "protypo-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A code generator based on rrgen using jinja like templates."

[features]
"default" = ["protypo/default"]
"tera" = ["protypo/tera"]
"minijinja" = ["protypo/minijinja"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
dirs = "5.0"
jsonptr = "0.6"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "deflate",
    "stream",
    "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
protypo = { path = "../protypo" }
