[package]
name = "protypo"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
futures = "0.3"
glob = "0.3"
json_value_merge = "2.0"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
zip = "2.2.1"
rrgen = { git = "https://github.com/dinosath/rrgen", branch = "mini-jinja", default-features = false, features = ["minijinja"] }