[package]
name = "app_name"
version = "0.1.0"
authors = ["Konstantinos Athanasiou <dinosath0@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = ["."]

[profile.release]
codegen-units = 1
lto = true
strip = true
debug = false
panic = "abort"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.8"
actix-settings = "0.8"
actix-service = "2"
actix-web = "4"
tera = "1.19.0"
dotenvy = "0.15"
listenfd = "1"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
env_logger = "0.11"