[package]
name = "app_name"
version = "0.1.0"
authors = ["Konstantinos Athanasiou <dinosath0@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = ["."]

[profile.release]
codegen-units = 1
lto = true
strip = true
debug = false
panic = "abort"

[dependencies]
actix-multipart = "0.7"
actix-session = { version = "0.10", features = ["redis-session",] }
actix-cors = "0.7"
actix-files = "0.6"
actix-rt = "2.10"
actix-settings = "0.8"
actix-service = "2"
actix-web = "4"
deadpool-redis = "0.19"
tera = "1.19.0"
dotenvy = "0.15"
listenfd = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","std","env-filter","registry",'json','tracing-log',] }
env_logger = "0.11"