[workspace]

[package]
name = "myapp"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "myapp-cli"

[workspace.dependencies]
loco-rs = { version = "0.14" }

[dependencies]
axum = "0.8"
async-trait = "0.1"
dotenvy = "0.15"
include_dir = "0.7"
loco-rs = { workspace = true }
regex = { version = "1.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", default-features = false, features = ["rt-multi-thread", ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.19", features = ["derive"] }

[[bin]]
name = "myapp-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
insta = { version = "1.39", features = ["redactions", "yaml", "filters"] }
loco-rs = { workspace = true, features = ["testing"] }
rstest = "0.24.0"
serial_test = "3.2"
