[package]
name = "app_name"
version = "0.1.0"
authors = ["Konstantinos Athanasiou <dinosath0@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = ["."]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
spring = "0.3"
spring-opentelemetry = "0.3"
spring-sea-orm = { version = "0.3", features = ["default","postgres","with-web"] }
spring-web = "0.3"
tokio = { version = "1.41" }